--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,6 @@ $brand-danger:      #d9534f;
   a, a:hover {
     text-decoration: none !important;
     color: white !important;
-
 }
 
 
@@ -114,4 +113,33 @@ footer {
       };
     }
   }
+}
+
+/* typography */
+
+main { 
+  h1, h2, h3, h4, h5, h6 {
+    line-height: 1;
+    color: $gray-light;
+  }
+}
+
+#myGoTopBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+#myGoTopBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
 }
