--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,6 +1,5 @@
 <% content_for :upper_part_page do %>
-
-  <div id="mycarousel" class="carousel slide" data-ride="carousel">
+ <div id="mycarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
@@ -13,13 +12,13 @@
       <div class="item active">
         <img src="<%= asset_path('0.jpg') %>" alt="...">
         <div class="carousel-caption">
-          <h1><a href="#statut">Statut</a></h1>
+          <h1><a href="#wladze">Władze klubu</a></h1>
         </div>
       </div>
       <div class="item">
         <img src="<%= asset_path('1.jpg') %>" alt="...">
         <div class="carousel-caption">
-          <h1><a href="#zarzad">Zarząd</a></h1>
+          <h1><a href="#statut">Statut</a></h1>
         </div>
       </div>
       <div class="item">
@@ -47,63 +46,75 @@
 
 <% end %><!--/ content_for :upper_part_page -->
 
+</br>
+<button class="btn btn-info pull-right" onclick="topFunction()" id="myGoTopBtn" title="Go to top">Top</button>
 
-<div id="statut">
-  <a name="statut"></a>
-    <h1 align="center" class="text-muted">STATUT</h1>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
+<div id="wladze">
+  <a name="wladze">
+    <div class="container">
+      <div class="row">
+        <h1 align="center"><strong>Władze klubu</strong></h1>
+      </div>
+      </br>
+
+      <div class="row well">
+        <h2 align="center">Zarząd</h2>
+        </br>
+        <div align="center" class="col-lg-4">
+          <img class="img-circle" src="<%= asset_path('wozniak.jpg') %>" alt="Roman Woźniak" width="180" height="180">
+          <h4>Prezes</h4>
+          <h3>Roman Woźniak</h3>
+        </div><!-- /.col-lg-4 -->
+        <div align="center" class="col-lg-4">
+          <img class="img-circle" src="<%= asset_path('hejne.jpg') %>" alt="Leszek Hejne" width="180" height="180">
+          <h4>Wiceprezes</h4>
+          <h3>Leszek Hejne</h3>
+        </div><!-- /.col-lg-4 -->
+        <div align="center" class="col-lg-4">
+          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="180" height="180">
+          <h4>Sekretarz</h4>
+          <h3>Wiesław Zawadzki</h3>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      <div class="row well">
+        <h2 align="center">Komisja Rewizyjna</h2>
+        </br>
+        <div align="center" class="col-lg-4">
+          <img class="img-circle" src="<%= asset_path('gusowski.jpg') %>" alt="Krzysztof Gusowski" width="180" height="180">
+          <h4>Przewodniczący</h4>
+          <h3>Krzysztof Gusowski</h3>
+        </div><!-- /.col-lg-4 -->
+        <div align="center" class="col-lg-4">
+          <img class="img-circle" src="<%= asset_path('maciejewski.jpg') %>" alt="Andrzej Maciejewski" width="180" height="180">
+          <h4>Sekretarz</h4>
+          <h3>Andrzej Maciejewski</h3>
+        </div><!-- /.col-lg-4 -->
+        <div align="center" class="col-lg-4">
+          <img class="img-circle" src="<%= asset_path('koczwara.jpg') %>" alt="Marek Koczwara" width="180" height="180">
+          <h4>Członek</h4>
+          <h3>Marek Koczwara</h3>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+    </div>
+
     </br>
   </a>
 </div>
 
-<div id="zarzad">
-  <a name="zarzad">
-    <h1 align="center" class="text-muted">ZARZĄD</h1>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
+
+<div id="statut">
+  <a name="statut"></a>
+    <div class="container">
+      <div class="row">
+        <h1 align="center"><strong>Statut</strong></h1>
+      </div>
+      </br>
+
+    </div>
+
     </br>
   </a>
 </div>
@@ -111,30 +122,55 @@
 
 <div id='sponsorzy'>
   <a name='sponsorzy'>
-    <h1 align="center" class="text-muted">SPONSORZY</h1>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
+    <div class="container">
+      <div class="row">
+        <h1 align="center"><strong>Sponsorzy</strong></h1>
+      </div>
+      </br>
+
+      <div class="row well">
+        <div align="center" class="col-lg-5">
+          </br>
+          <%= link_to(image_tag("kontbud.png", :alt => "Kontbud Spółka z o.o.", :class=>"img", height: '51'), "http://www.kontbud.com", :class=>"links") %>
+        </div><!-- /.col-lg-4 -->
+        <div align="center" class="col-lg-7">
+          <h3>Kontbud Spółka z o.o.</h3>
+          <h4>ul.Smoleńska 17A, 85-833 Bydgoszcz</h4>
+        </div><!-- /.col-lg-4 -->
+      </div><!-- /.row -->
+
+
+      <div class="row well">
+        <div align="center" class="col-lg-5">
+          <%= link_to(image_tag("pgk.png", :alt => "Pomorska Grupa Konsultingowa SA", :class=>"img", height: '110'), "https://www.pgksa.pl/", :class=>"links") %>
+        </div><!-- /.col-lg-4 -->
+        <div align="center" class="col-lg-7">
+          <h3>Pomorska Grupa Konsultingowa SA</h3>
+          <h4>ul. Unii Lubelskiej 4c, 85-059 Bydgoszcz</h4>
+        </div><!-- /.col-lg-4 -->
+      </div>
+    </div>
   </a>
 </div>
+
+<script type="text/javascript">
+
+  // When the user scrolls down 20px from the top of the document, show the button
+  window.onscroll = function() {scrollFunction()};
+
+  function scrollFunction() {
+      if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
+          document.getElementById("myGoTopBtn").style.display = "block";
+      } else {
+          document.getElementById("myGoTopBtn").style.display = "none";
+      }
+  }
+
+  // When the user clicks on the button, scroll to the top of the document
+  function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+  }
+
+</script>
+
