--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -109,11 +109,189 @@
   <a name="statut"></a>
     <div class="container">
       <div class="row">
-        <h1 align="center"><strong>Statut</strong></h1>
+        <h2 align="center"><strong>Statut Stowarzyszenia pod nazwą Klub Sportowy BTG Bydgoszcz</strong></h2>
       </div>
       </br>
+      <div class="row">
+        <h3 align="center"><strong>Rozdział I</strong></h3>
+        <h4 align="center"><strong>POSTANOWIENIA OGÓLNE</strong></h4>
+        </br>
+        <h5 align="center">§ 1</h5>
+        <h6>1. Stowarzyszenie nosi nazwę: <strong>Klub Sportowy BTG Bydgoszcz</strong> i zwane jest w dalszych przepisach Statutu <strong>Klubem</strong>.</h6>
+        <h6>2. Klub działa na podstawie ustawy Prawo o stowarzyszeniach, ustawy o sporcie oraz niniejszego Statutu.</h6>
+        </br>
+        <h5 align="center">§ 2</h5>
+        <h6>1. Klub działa na terenie Rzeczypospolitej Polskiej.</h6>
+        <h6>2. Siedzibą Klubu jest miasto Bydgoszcz.</h6>
+        </br>
+        <h5 align="center">§ 3</h5>
+        <h6>1. Klub posiada osobowość prawną na podstawie art. 4 ust. 7 ustawy o sporcie.</h6>
+        <h6>2. Klub używa pieczęci, godła, flagi, barw, odznak i znaczków organizacyjnych zgodnie z obowiązującymi przepisami.</h6>
+        </br>
+        <h5 align="center">§ 4</h5>
+        <h6>1. Klub opiera swoją działalność na pracy społecznej członków. Dla realizacji celów statutowych Klub może zatrudniać pracowników.</h6>
+        <h6>2. Klub nie może prowadzić działalności gospodarczej.</h6>
+        </br>
+        <h5 align="center">§ 5</h5>
+        <h6>Klub może być członkiem organizacji sportowych o podobnym profilu działania.</h6>
+        </br>
+      </div><!-- /.row -->
 
-    </div>
+      <div class="row">
+        <h3 align="center"><strong>Rozdział II</strong></h3>
+        <h4 align="center"><strong>CELE I SPOSOBY ICH REALIZACJI</strong></h4>
+        </br>
+        <h5 align="center">§ 6</h5>
+        <h6>1. Celem Klubu jest:</h6>
+        <h6>&nbsp;1) organizowanie i rozwijanie kultury fizycznej, sportu i rekreacji,</h6>
+        <h6>&nbsp;2) upowszechnianie kultury fizycznej wśród dzieci, młodzieży i dorosłych,</h6>
+        <h6>&nbsp;3) kształtowanie postaw członków Klubu i wychowanie poprzez kulturę fizyczną i sport,</h6>
+        <h6>&nbsp;4) promowanie idei uprawiania sportu w dziedzinie brydża sportowego</h6>
+        <h6>&nbsp;5) organizowanie aktywnego wypoczynku sportowego dzieci, młodzieży i dorosłych.</h6>
+        </br>
+        <h5 align="center">§ 7</h5>
+        <h6>1. Klub realizuje swoje cele poprzez:</h6>
+        <h6>&nbsp;1) organizowanie i prowadzenie szkolenia dzieci, młodzieży i dorosłych w dziedzinie brydża sportowego,</h6>
+        <h6>&nbsp;2) uczestnictwo w turniejach, rozgrywkach ligowych i imprezach sportowych,</h6>
+        <h6>&nbsp;3) organizowanie imprez sportowych i rekreacyjnych,</h6>
+        <h6>&nbsp;4) organizowanie współzawodnictwa sportowego,</h6>
+        <h6>&nbsp;5) organizowanie i prowadzenie szkoleń, kursów, seminariów, obozów sportowych i rekreacyjnych,</h6>
+        <h6>&nbsp;6) współdziałanie z organizacjami sportowymi, placówkami oświatowymi i innymi instytucjami w zakresie działalności statutowej,</h6>
+        <h6>&nbsp;7) współdziałanie z władzami samorządowymi miasta i regionu oraz organizacjami sportowymi w zakresie tworzenia warunków organizacyjnych i materialnych do uprawiania sportu i rekreacji.</h6>
+        </br>
+      </div><!-- /.row -->
+
+      <div class="row">
+        <h3 align="center"><strong>Rozdział III</strong></h3>
+        <h4 align="center"><strong>CZŁONKOWIE, ICH PRAWA I OBOWIĄZKI</strong></h4>
+        </br>
+        <h5 align="center">§ 8</h5>
+        <h6>1. Członkami Klubu mogą być osoby fizyczne i prawne, które akceptują cele Klubu i pragną włączyć się w ich realizację.</h6>
+        <h6>2. Osoba prawna może być jedynie członkiem wspierającym.</h6>
+        <h6>3. Osoba prawna działa w Klubie za pośrednictwem swego przedstawiciela.</h6>
+        </br>
+        <h5 align="center">§ 9</h5>
+        <h6>1. Członkowie Klubu dzielą się na:</h6>
+        <h6>&nbsp;1) zwyczajnych,</h6>
+        <h6>&nbsp;2) wspierających.</h6>
+        </br>
+        <h5 align="center">§ 10</h5>
+        <h6>1. Członkiem zwyczajnym może zostać osoba fizyczna posiadająca pełną zdolność do czynności prawnych i niepozbawiona praw publicznych</h6>
+        <h6>2. Członkiem wspierającym może zostać osoba fizyczna, a także osoba prawna, która zadeklaruje wsparcie realizacji celów Klubu, pomoc materialną bądź organizacyjną.</h6>
+        <h6>3. Przyjęcie w poczet członków zwyczajnych i wspierających następuje w drodze uchwały Zarządu, podjętej po złożeniu pisemnej deklaracji przez wstępującego do Klubu, wspartej pisemna rekomendacją 2 członków założycieli.</h6>
+        </br>
+        <h5 align="center">§ 11</h5>
+        <h6>1. Członkowie zwyczajni mają prawo:</h6>
+        <h6>&nbsp;1) uczestniczenia z głosem stanowiącym w Walnych Zebraniach Członków,</h6>
+        <h6>&nbsp;2) biernego i czynnego uczestniczenia w wyborach do władz Klubu,</h6>
+        <h6>&nbsp;3) zgłaszania postulatów i wniosków w sprawach związanych z działalnością Klubu,</h6>
+        <h6>&nbsp;4) brania udziału w zajęciach, zawodach oraz imprezach sportowych i rekreacyjnych, organizowanych przez Klub,</h6>
+        <h6>&nbsp;5) korzystania z obiektów i urządzeń Klubu na zasadach określonych przez Zarząd.</h6>
+        </br>
+        <h5 align="center">§ 12</h5>
+        <h6>1. Członkowie zwyczajni mają obowiązek:</h6>
+        <h6>&nbsp;1) brania aktywnego udziału w działalności Klubu,</h6>
+        <h6>&nbsp;2) przestrzegania Statutu, regulaminów i uchwał władz Klubu,</h6>
+        <h6>&nbsp;3) troszczenia się o dobro i rozwój Klubu,</h6>
+        <h6>&nbsp;4) stałego podnoszenia poziomu sportowego,</h6>
+        <h6>&nbsp;5) godnego reprezentowania barw klubowych i narodowych,</h6>
+        <h6>&nbsp;6) regularnego opłacania składek członkowskich.</h6>
+        </br>
+        <h5 align="center">§ 13</h5>
+        <h6>1. Członkowie wspierający mają prawo:</h6>
+        <h6>&nbsp;1) uczestniczenia w Walnych Zebraniach Członków z głosem doradczym,</h6>
+        <h6>&nbsp;2) biernego uczestniczenia w wyborach do władz Klubu,</h6>
+        <h6>&nbsp;3) uczestniczenia w działalności Klubu,</h6>
+        <h6>&nbsp;4) zgłaszania postulatów i wniosków w sprawach związanych z działalnością Klubu.</h6>
+        </br>
+        <h5 align="center">§ 14</h5>
+        <h6>1. Członkowie wspierający mają obowiązek:</h6>
+        <h6>&nbsp;1) wspierania realizacji celów Klubu,</h6>
+        <h6>&nbsp;2) przestrzegania Statutu, regulaminów i uchwał władz Klubu,</h6>
+        <h6>&nbsp;3) troszczenia się o dobro i rozwój Klubu,</h6>
+        <h6>&nbsp;4) realizowania zadeklarowanych świadczeń na rzecz Klubu.</h6>
+        </br>
+
+
+        <h5 align="center">§ 15</h5>
+        <h6>1. Ustanie członkostwa następuje na skutek:</h6>
+        <h6>&nbsp;1) dobrowolnej rezygnacji z przynależności do Klubu, złożonej Zarządowi na piśmie,</h6>
+        <h6>&nbsp;2) śmierci lub utraty osobowości prawnej,</h6>
+        <h6>&nbsp;3) pozbawienia praw publicznych,</h6>
+        <h6>&nbsp;4) utraty pełnej zdolności do czynności prawnych</h6>
+        <h6>&nbsp;5) skreślenia, w drodze uchwały Zarządu, z powodu:</h6>
+        <h6>&nbsp;&nbsp;a) zalegania z opłatą składki członkowskiej bądź niewywiązywania się członka wspierającego z zadeklarowanych świadczeń na rzecz Klubu przez okres dłuższy niż 6 miesięcy</h6>
+        <h6>&nbsp;6) wykluczenia, w drodze uchwały Zarządu, z powodu:</h6>
+        <h6>&nbsp;&nbsp;a) naruszania przepisów Statutu lub regulaminów,</h6>
+        <h6>&nbsp;&nbsp;b) nieprzestrzegania uchwał władz Klubu,</h6>
+        <h6>&nbsp;&nbsp;c) działania na szkodę Klubu.</h6>
+        <h6>2. Zarząd, w terminie 30 dni od daty podjęcia uchwały, o której mowa w ust. 1 pkt 5 i 6, ma obowiązek doręczyć jej odpis osobie, której uchwała dotyczy.</h6>
+        <h6>3. Osobie, której dotyczy uchwała Zarządu w sprawie skreślenia lub wykluczenia członka Klubu, przysługuje odwołanie do Walnego Zebrania Członków.</h6>
+        <h6>4. Odwołanie można wnieść w ciągu 30 dni od daty otrzymania odpisu uchwały</h6>
+        <h6>5. Odwołanie rozpatruje Walne Zebranie Członków na najbliższym posiedzeniu.</h6>
+        </br>
+      </div><!-- /.row -->
+
+      <div class="row">
+        <h3 align="center"><strong>Rozdział IV</strong></h3>
+        <h4 align="center"><strong>WŁADZE KLUBU</strong></h4>
+        </br>
+        <h5 align="center">§ 16</h5>
+        <h6>1. Władzami Klubu są:</h6>
+        <h6>&nbsp;1) Walne Zebranie Członków, zwane w dalszych przepisach Statutu Walnym Zebraniem,</h6>
+        <h6>&nbsp;2) Zarząd,</h6>
+        <h6>&nbsp;3) Komisja Rewizyjna</h6>
+        <h6>2. Kadencja władz wybieralnych Klubu trwa 2 lata.</h6>
+        <h6>3. Członkowie Zarządu i Komisji Rewizyjnej wybierani są przez Walne Zebranie w głosowaniu jawnym lub tajnym, w zależności od uchwały Walnego Zebrania podjętej w tym przedmiocie.</h6>
+        <h6>4. Wyboru władz Klubu dokonuje się spośród osób, które wyraziły zgodę na kandydowanie.</h6>
+        <h6>5. Uchwały wszystkich władz Klubu zapadają w głosowaniu jawnym lub tajnym, zwykłą większością głosów, przy obecności co najmniej połowy ogólnej liczby uprawnionych do głosowania, o ile dalsze przepisy Statutu nie stanowią inaczej. W sytuacji równej ilości głosów za decydujący uznaje się głos przewodniczącego danego organu.</h6>
+        </br>
+        <h5 align="center">§ 17</h5>
+        <h6>1. W przypadku wygaśnięciu mandatu członka Zarządu lub Komisji Rewizyjnej w czasie trwania kadencji, władzom tym przysługuje prawo uzupełnienia swego składu w drodze kooptacji.</h6>
+        <h6>2. W tym trybie można uzupełnić nie więcej niż ½ składu organu pochodzącego z wyboru.</h6>
+        </br>
+      </div><!-- /.row -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+      </br>
+
+
+      <div class="row">
+        <h3 align="center"><strong>Rozdział VI</strong></h3>
+        <h4 align="center"><strong>POSTANOWIENIA KOŃCOWE</strong></h4>
+        </br>
+        <h5 align="center">§ 24</h5>
+        <h6>1. Uchwałę o zmianie Statutu lub uchwałę o rozwiązaniu się Klubu podejmuje Walne Zebranie w trybie określonym w § 19 ust. 2.</h6>
+        <h6>2. W przypadku podjęcia uchwały o rozwiązaniu się Klubu, Walne Zebranie powołuje w drodze uchwały likwidatora, a także podejmuje uchwałę o przeznaczeniu majątku Klubu.</h6>
+        </br>
+        <h5 align="center">§ 25</h5>
+        <h6>W sprawach nieuregulowanych w niniejszym Statucie zastosowanie mają przepisy ustawy Prawo o stowarzyszeniach.</h6>
+        </br>
+      </div><!-- /.row -->
+
+
+    </div><!-- /.container -->
 
     </br>
   </a>
