--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,7 +33,13 @@ $brand-danger:      #d9534f;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-/* Make the image fully responsive */
+
+.carousel {
+  height: 85%; 
+  min-height: 85%; 
+  max-height: 85%; 
+}
+
 .carousel-inner img {
   width: 100%;
   height: 100%;
