--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,11 +2,11 @@
 	</br>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-1">
+			<div class="col-xs-1">
 			  <%= link_to( image_tag("pzbs_logo.png", :class => "img img-responsive" ), "https://bridge.artexsoft.eu" ) %> 
 			</div>
-			<div class="col-sm-5 col-sm-offset-6">
-			  <h2><strong>Klub Sportowy BTG Bydgoszcz</strong></h2>
+			<div class="col-xs-11">
+			  <h2 align="right"><strong>Klub Sportowy BTG Bydgoszcz</strong></h2>
 			</div>
 		</div>
 	</div>
