--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,12 +6,14 @@
       <h5>85-833 Bydgoszcz</h5>
       <br>
       <h6>&copy; 2018 B&J</h6>
+      <hr class="visible-xs">
     </div>
 
     <div class="col-sm-4">
       <h4>Kontakt</h4>
         <ul><h5><span class="glyphicon glyphicon-envelope"></span> <%= mail_to "abukuba2134@gmail.gov.pl" %></h5></ul>
         <ul><h5><span class="glyphicon glyphicon-earphone"></span> +48 784 024 795 </h5></ul>
+      <hr class="visible-xs">
     </div>
 
     <div class="col-sm-4">
